<resources>
    <string name="app_name">Lib App</string>
    <string name="btnQuestoes">QUESTÕES</string>
    <string name="btnVocabulario">VOCABULÁRIO</string>
    <string name="btnConfiguracoes">CONFIGURAÇÕES</string>
    <string name="btnInformacoes">INFORMAÇÕES</string>
    <string name="btnContato">CONTATO</string>
    <string name="btnVoltaMenu">VOLTAR AO MENU</string>
    <string name="btnVoltaConfig">VOLTAR AS CONFIGURAÇÕES</string>
    <string name="btnPronome">PRONOMES INTERROGATIVOS</string>
    <string name="btbTempo">TEMPO</string>
    <string name="btnTransporte">MEIOS DE TRANSPORTE</string>
    <string name="btnVoltaTemas">VOLTAR AOS TEMAS</string>
    <string name="btnAlfabeto">ALFABETO</string>
    <string name="btnNumeros">NÚMEROS</string>
    <string name="btnIniciar">INICIAR</string>
    <string name="btnProximo">PRÓXIMA QUESTÃO</string>
    <string name="btnVoltar">VOLTAR</string>
    <string name="btnFinalizar">FINALIZAR</string>
    <string name="btnTentarNovamente">TENTAR NOVAMENTE</string>
</resources>