<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemaVoc">

    <Button
        android:id="@+id/btnVoc2"
        android:layout_width="379dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="550dp"
        android:background="@color/Azul"
        android:text="@string/btnVocabulario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="550dp"
        android:text="TEMAS"
        android:textColor="@color/Preto"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAlfabeto"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:background="@color/LaranjaAvermelhado"
        android:text="@string/btnAlfabeto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <Button
        android:id="@+id/btnNumero"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:background="@color/MarromClaro"
        android:text="@string/btnNumeros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <Button
        android:id="@+id/btnPronome2"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:background="@color/Azul"
        android:text="@string/btnPronome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTempo2"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:background="@color/LaranjaAvermelhado"
        android:text="@string/btbTempo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/btnTransporte2"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:background="@color/MarromClaro"
        android:text="@string/btnTransporte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <Button
        android:id="@+id/btnVoltMenu2"
        android:layout_width="383dp"
        android:layout_height="46dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/Azul"
        android:text="@string/btnVoltaMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageMariduv2"
        android:layout_width="88dp"
        android:layout_height="185dp"
        android:src="@drawable/marinacaraduvida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />


    <ImageView
        android:id="@+id/imageMarihduv2"
        android:layout_width="91dp"
        android:layout_height="172dp"
        android:src="@drawable/marianacaraduvida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />
</androidx.constraintlayout.widget.ConstraintLayout>